# KVCompass

./: .gitignore  ARCHITECTURE.md  Evaluation_Barnes.ipynb  Evaluation_Sawant.ipynb  Evaluation_Tanory.ipynb  KVCompass.ipynb  PACE_RUNBOOK.md  README.md  analysis.ipynb  benchmarks.ipynb  pyproject.toml  requirements.txt  test_extended_features_v2.ipynb
configs/: benchmark_sweeps.no_kv_cache_smoke.yaml  benchmark_sweeps.pace_assignment_1.yaml  benchmark_sweeps.pace_assignment_2.yaml  benchmark_sweeps.pace_assignment_3.yaml  benchmark_sweeps.pace_assignment_4.yaml  benchmark_sweeps.pace_assignment_5.yaml  benchmark_sweeps.pace_budget_sensitivity_4k.yaml  benchmark_sweeps.pace_budget_sensitivity_8k.yaml  benchmark_sweeps.pace_full_matrix.yaml  benchmark_sweeps.yaml  methods.yaml  scenarios.yaml
scripts/: aggregate_results.py  build_benchmark_report.py  make_confusion_matrix.py  make_plots.py  make_recommendations.py  pace_sweep.sbatch  plot_memory_savings.py  plot_quality_heatmap_16k.py  run_budget_sweep.py  run_kvpress_benchmark_eval.py  run_kvpress_benchmark_sweep.py  run_kvpress_eval.py  submit_pace_jobs.sh  write_pace_configs.py
src/kvpress_eval/: __init__.py  aggregate.py  benchmark_eval.py  benchmark_registry.py  benchmark_reporting.py  benchmark_sweep.py  compat.py  config.py  evaluate.py  io_utils.py  methods.py  plotting.py  recommendations.py  runner.py  scenarios.py
